--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             </h1>
             <ul>
                 <li>
-                    <a href="#" class="active">Home</a>
+                    <a href="#" class = 'a' class="current">Home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#" class = 'a'>About</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#" class = 'a'>Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#" class = 'a'>Contact</a>
                 </li>
             </ul>
         </div>
